Bugfix: the timestamp of the event camera changes when cutting the event stream

--- a/Notebooks/offset_computation.ipynb
+++ b/Notebooks/offset_computation.ipynb
@@ -389,14 +389,38 @@
     "\n",
     "# Time offset is the time of the first diff\n",
     "first_sample_ec = peak_idx[3] + 1\n",
-    "time_offset_ec = triggers_ec[first_sample_ec]\n",
-    "print(f\"Time offset: {time_offset_ec}\")\n",
-    "offset_wrt_start_trigger_ec = time_offset_ec -triggers_ec[peak_idx[0]]\n",
+    "offset_wrt_start_trigger_ec = triggers_ec[first_sample_ec] -triggers_ec[peak_idx[0]]\n",
     "print(f\"Offset of first sample wrt start of trigger sequence: {offset_wrt_start_trigger_ec}\")\n",
     "assert np.isclose(const.GOLDEN_DIFFS_PPS, offset_wrt_start_trigger_ec/1e6)\n",
+    "time_offset_ec_pre_cut = triggers_ec[first_sample_ec]\n",
+    "\n",
+    "# As we will cut the event stream, we need to get a new timestamp for the offset (post cut)\n",
+    "# Read https://github.com/ros-event-camera/event_camera_codecs/?tab=readme-ov-file#event-time-stamps for more information\n",
+    "bag_reader = BagReader(str(BAG), [const.EC_TOPIC])\n",
+    "decoder = ECDecoder()\n",
+    "i = 0\n",
+    "for topic, msg, t_rec  in bag_reader.read_all():\n",
+    "    decoder.decode(msg)\n",
+    "    # cd_events = decoder.get_cd_events()\n",
+    "    # print(cd_events)\n",
+    "    trig_events = decoder.get_ext_trig_events()\n",
+    "    if len(trig_events) > 0 and trig_events[0][0] == 1:\n",
+    "        if i < first_sample_ec:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            assert trig_events[0][1] == time_offset_ec_pre_cut\n",
+    "            # Instantiate a new decoder and get the time offset\n",
+    "            decoder = ECDecoder()\n",
+    "            decoder.decode(msg)\n",
+    "            trig_events = decoder.get_ext_trig_events()\n",
+    "            time_offset_ec_post_cut = trig_events[0][1]\n",
+    "            break\n",
+    "\n",
+    "print(f\"Time offset pre cut: {time_offset_ec_pre_cut}\")\n",
+    "print(f\"Time offset post cut: {time_offset_ec_post_cut}\")\n",
     "\n",
     "# Print timestamp of the first sample to double check\n",
-    "print(f\"Timestamp of first sample: {triggers_ec[first_sample_ec] - time_offset_ec}\") "
+    "# print(f\"Old timestamp of first sample: {triggers_ec[first_sample_ec_old] - time_offset_ec}\") "
    ]
   },
   {
@@ -481,26 +505,21 @@
     "offset_wrt_start_trigger_ublox = triggers_ublox_ns[first_sample_ublox] - triggers_ublox_ns[up_idx]\n",
     "assert np.isclose(const.GOLDEN_DIFFS_PPS, offset_wrt_start_trigger_ublox/1e9, atol=1e-6, rtol=1e-4)\n",
     "\n",
-    "# Compute drift\n",
-    "diff = triggers_ublox_double[-1] - triggers_ublox_double[up_idx+1]\n",
-    "drift = diff/(np.round(diff))\n",
-    "print(f\"Estimated drift: {1-drift}\")\n",
-    "time_offset_ublox = triggers_ublox_ns[first_sample_ublox]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "triggers_ublox_double[-1]- triggers_ublox_double[up_idx+1]"
+    "# Compute time offset\n",
+    "time_offset_ublox = triggers_ublox_ns[first_sample_ublox]\n",
+    "\n",
+    "# Compute drift. Skip first and last sample for better results\n",
+    "diff_double = triggers_ublox_double[-1] - triggers_ublox_double[up_idx+1]\n",
+    "drift_ns_array = np.diff(triggers_ublox_ns[up_idx+2:]) - 1000000000\n",
+    "# filter lost samples\n",
+    "drift_ns_array = drift_ns_array[drift_ns_array < 10000000] # 10 ms\n",
+    "assert np.abs(np.mean(drift_ns_array)) < 10000 # 10 ppm\n",
+    "print(f\"Estimated drift ns - mean: {np.mean(drift_ns_array)} - min: {np.min(drift_ns_array)} - max: {np.max(drift_ns_array)} - std: {np.std(drift_ns_array)}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "source": [
     "# Analysis of results and write to yaml"
@@ -509,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,13 +556,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save into yaml\n",
     "time_offsets = {\"offsets\": {\n",
-    "                \"ec\":    {\"time_offset\": int(time_offset_ec),   \"first_sample\": int(first_sample_ec)},\n",
+    "                \"ec\":    {\"time_offset_pre_cut\": int(time_offset_ec_pre_cut), \"time_offset_post_cut\": int(time_offset_ec_post_cut), \"first_sample\": int(first_sample_ec)},\n",
     "                \"flir\":  {\"time_offset\": int(time_offset_flir), \"first_sample\": int(first_sample_flir)},\n",
     "                \"vnav\":  {\"time_offset\": int(time_offset_vnav), \"first_sample\": int(first_sample_vnav)},\n",
     "                \"sf000\": {\"time_offset\": int(time_offset_sf000)},\n",
@@ -556,7 +575,11 @@
     "                \"flir\":  {\"pps_gap_ns\": int(offset_wrt_start_trigger_flir), \"intervals_ns\": [int(i) for i in diff_with_golden_flir*1e9]},\n",
     "                \"vnav\":  {\"pps_gap_ns\": int(offset_wrt_start_trigger_vnav), \"intervals_ns\": [int(i) for i in diff_with_golden_vnav*1e9]},\n",
     "                \"ublox\": {\"pps_gap_ns\": int(offset_wrt_start_trigger_ublox)}\n",
-    "                }\n",
+    "                },\n",
+    "                \"drift_per_s_wrt_gps_ns\": {\"mean\": float(np.mean(drift_ns_array)),\n",
+    "                                           \"std\": float(np.std(drift_ns_array)),\n",
+    "                                           \"min\": int(np.min(drift_ns_array)),\n",
+    "                                           \"max\": int(np.max(drift_ns_array))}\n",
     "               }\n",
     "            \n",
     "with open(SYNC_YAML, \"w\") as file:\n",
