--- a/Notebooks/sync_verification.ipynb
+++ b/Notebooks/sync_verification.ipynb
@@ -34,7 +34,8 @@
     "import time\n",
     "import collections\n",
     "import cv2\n",
-    "import pdb"
+    "import pdb\n",
+    "import std_msgs.msg"
    ]
   },
   {
@@ -44,27 +45,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Input bag\n",
-    "# Experiments on 08.19\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/cam.calib.1/raw_bag/ha_ec_2024-08-19-12-52-56_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/cam.calib.2/raw_bag/ha_ec_2024-08-19-12-55-58_0.mcap\") # This bag is failing GPS assertion\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/flight.day.1/raw_bag/ha_ec_2024-08-19-11-43-08_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/flight.day.2/raw_bag/ha_ec_2024-08-19-12-11-57_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/imu.calib.1/raw_bag/ha_ec_2024-08-19-13-00-10_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/imu.calib.2/raw_bag/ha_ec_2024-08-19-13-02-06_0.mcap\")\n",
-    "# Experiments on 08.25\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/imu.calib.1/raw_bag/ha_ec_2024-08-25-16-44-38_0.mcap\")\n",
-    "BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/imu.calib.2/raw_bag/ha_ec_2024-08-25-16-46-30_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.4/raw_bag/ha_ec_2024-08-25-17-35-46_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.night.3/raw_bag/ha_ec_2024-08-25-20-12-45_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.3/ha_ec_2024-08-25-17-15-12_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/cam.calib.1/raw_bag/ha_ec_2024-08-25-16-38-19_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.1/raw_bag/ha_ec_2024-08-25-15-27-17_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.night.1/raw_bag/ha_ec_2024-08-25-19-44-20_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.2/raw_bag/ha_ec_2024-08-25-15-58-07_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/cam.calib.2/raw_bag/ha_ec_2024-08-25-16-41-21_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/imu.calib.3/ha_ec_2024-08-25-16-48-34_0.mcap\")\n",
-    "# BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.night.2/raw_bag/ha_ec_2024-08-25-19-58-42_0.mcap\")"
+    "# Input synchronized bag\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/cam.calib.1/synchronized/synchronized_0.mcap\")\n",
+    "SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/cam.calib.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/flight.day.1/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/flight.day.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/imu.calib.1/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.19.Pennov.Flight.and.Calib/imu.calib.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/cam.calib.1/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/cam.calib.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.1/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.3/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.day.4/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.night.1/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.night.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/flight.night.3/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/imu.calib.1/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/imu.calib.2/synchronized/synchronized_0.mcap\")\n",
+    "# SYNCED_BAG = Path(\"/data/ha_ec_data/2024.08.25.Pennov.Flight.and.Calib/imu.calib.3/synchronized/synchronized_0.mcap\")"
    ]
   },
   {
@@ -74,19 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Global variables used all over the file\n",
-    "SYNCED_BAG = BAG.parents[1] / \"synchronized\" #/ str(BAG.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Validate synchronized bag topic number\n",
-    "bag_reader = BagReader(SYNCED_BAG/\"synchronized_0.mcap\", const.ALL_OUTPUT_TOPICS)\n",
+    "bag_reader = BagReader(SYNCED_BAG, const.ALL_OUTPUT_TOPICS)\n",
     "bag_reader.print_stats(all_topics=True)\n",
     "\n",
     "num_imu_msgs = bag_reader.get_num_msgs(const.OUTPUT_VNAV_IMU_TOPIC)\n",
@@ -101,13 +89,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Iterate over the bag to get timestamps\n",
     "   \n",
-    "bag_reader = BagReader(SYNCED_BAG/\"synchronized_0.mcap\", const.ALL_OUTPUT_TOPICS)\n",
+    "bag_reader = BagReader(SYNCED_BAG, const.ALL_OUTPUT_TOPICS)\n",
     "\n",
     "msg_info = {i: {\"first_msg\": None, \n",
     "                \"first_bag_ts\": None, \n",
@@ -134,6 +122,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that the events are synchronized with the decoder\n",
+    "decoder = Decoder()\n",
+    "bag_reader = BagReader(SYNCED_BAG, [const.OUTPUT_EC_EVENTS_TOPIC, const.OUTPUT_EC_TRIGGER_TOPIC])\n",
+    "first_trigger_ts = None\n",
+    "for topic, msg, timestamp in bag_reader.read_all():\n",
+    "    if topic == const.OUTPUT_EC_EVENTS_TOPIC:\n",
+    "        # print(timestamp)\n",
+    "        msg_ts = msg.header.stamp\n",
+    "        decoder.decode(msg)\n",
+    "        # events = decoder.get_cd_events()\n",
+    "        trigger = decoder.get_ext_trig_events()\n",
+    "        if len(trigger) > 0:\n",
+    "            if first_trigger_ts is None:\n",
+    "                first_trigger_ts = msg_ts\n",
+    "                first_trigger_ts_bag = timestamp\n",
+    "            else:\n",
+    "                break\n",
+    "            break\n",
+    "    elif topic == const.OUTPUT_EC_TRIGGER_TOPIC:\n",
+    "        trigger_msg_ts = msg.stamp\n",
+    "        trigger_msg_ts_bag = timestamp\n",
+    "        \n",
+    "# Check that the trigger topic and the trigger in the event stream agree\n",
+    "assert msg_ts == trigger_msg_ts\n",
+    "# Check that the first message is a trigger message\n",
+    "assert first_trigger_ts == msg_ts\n",
+    "# check that the timestamp and the event stream agree for the event topic\n",
+    "assert first_trigger_ts.sec*1000000+first_trigger_ts.nanosec//1000 == trigger[0][1]\n",
+    "# check that the timestamp and the event stream agree for the trigger topic\n",
+    "assert trigger_msg_ts.sec*1000000+trigger_msg_ts.nanosec//1000 == trigger[0][1]\n",
+    "# Check that the bag timestamp is correct for the event topic\n",
+    "assert first_trigger_ts.sec*1000000000+first_trigger_ts.nanosec == first_trigger_ts_bag\n",
+    "# Check that the bag timestamp is correct for the trigger topic\n",
+    "assert trigger_msg_ts.sec*1000000000+trigger_msg_ts.nanosec == trigger_msg_ts_bag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6",
    "metadata": {},
    "outputs": [],
@@ -146,11 +177,13 @@
     "    # Get the number of lost triggers by looking at the samples that have a period larger than 1 target period\n",
     "    plt.figure()\n",
     "    plt.plot(period)\n",
+    "    plt.title(f\"Target freq: {target_freq}\")\n",
     "    lost_triggers = period >= 1.8*target_period\n",
     "    return np.min(freq), np.mean(freq), np.std(freq), np.max(freq), np.count_nonzero(lost_triggers)\n",
     "\n",
     "def get_ts_in_ns(header):\n",
     "    ''' Convert a header msg into nanoseconds '''\n",
+    "    assert isinstance(header, std_msgs.msg.Header)\n",
     "    return header.stamp.sec*1000000000 + header.stamp.nanosec\n",
     "\n",
     "# Check the first timestamp\n",
@@ -166,7 +199,8 @@
     "    assert first_message_diff_imu > 0 and first_message_diff_imu < const.VNAV_T_NS, f\"first_message_diff_imu is greater than 2.5 ms: {first_message_diff_imu/1e6}\"\n",
     "\n",
     "    first_message_diff_range = msg_info[const.OUTPUT_RANGE_TOPIC][\"first_bag_ts\"] - msg_info[const.OUTPUT_EC_EVENTS_TOPIC][\"first_bag_ts\"]\n",
-    "    assert first_message_diff_range > 0 and first_message_diff_range < const.RANGE_T_NS, f\"first_message_diff_range is greater than 16 ms: {first_message_diff_range/1e6}\"\n",
+    "    # Be a bit more lenient for the range measurements as the frequency may fluctuate\n",
+    "    assert first_message_diff_range > 0 and first_message_diff_range < (const.RANGE_T_NS + 0.002*1e9), f\"first_message_diff_range is greater than 16 ms: {first_message_diff_range/1e6}\"\n",
     "    \n",
     "    # Check that the timestamp in the message agrees with the ROS timestamp\n",
     "    assert get_ts_in_ns(msg_info[const.OUTPUT_FLIR_IMAGE_TOPIC][\"first_msg\"].header) == msg_info[const.OUTPUT_FLIR_IMAGE_TOPIC][\"first_bag_ts\"]\n",
@@ -189,10 +223,11 @@
     "\n",
     "    #  Check rates for all sensors and number of lost triggers\n",
     "    topic_rates = {const.OUTPUT_FLIR_IMAGE_TOPIC: const.FLIR_FREQ,\n",
-    "                   const.OUTPUT_EC_TRIGGER_TOPIC: const.EC_TRIGGER_FREQ,\n",
     "                   const.OUTPUT_VNAV_IMU_TOPIC: const.VNAV_FREQ,\n",
+    "                   const.OUTPUT_GPS_TOPIC: const.GPS_FREQ,\n",
     "                   const.OUTPUT_RANGE_TOPIC: const.RANGE_FREQ,\n",
-    "                   const.OUTPUT_GPS_TOPIC: const.GPS_FREQ}\n",
+    "                   const.OUTPUT_EC_TRIGGER_TOPIC: const.EC_TRIGGER_FREQ,}\n",
+    "    any_errors = False\n",
     "    for topic in topic_rates:\n",
     "        target_freq = topic_rates[topic]\n",
     "        fmin, fmean, fstd, fmax, lost_triggers = freq_calculate(msg_info[topic][\"bag_timestamps\"], target_freq)\n",
@@ -200,12 +235,29 @@
     "        if lost_triggers:\n",
     "            print(f\"{topic} - {lost_triggers} lost triggers detected\")\n",
     "\n",
-    "        if topic == const.OUTPUT_EC_TRIGGER_TOPIC or topic == const.OUTPUT_RANGE_TOPIC:\n",
-    "            assert np.isclose(target_freq, fmean, rtol=1e-3, atol=1e-6), f\"Error checking avg frequency for {topic}. Target frequency: {target_freq}. Average frequency: {fmean}\"\n",
-    "            assert lost_triggers < 5, f\"More than 5 triggers lost for {topic}\"\n",
+    "\n",
+    "        if topic == const.OUTPUT_RANGE_TOPIC:\n",
+    "            if not np.isclose(target_freq, fmean, rtol=1e-2, atol=1e-4):\n",
+    "                print(f\"Error checking avg frequency for {topic}. Target frequency: {target_freq}. Average frequency: {fmean}\")\n",
+    "                any_errors = True\n",
+    "            if not lost_triggers < 5:\n",
+    "                print(f\"More than 5 triggers lost for {topic}\")\n",
+    "                any_errors = True\n",
+    "        elif topic == const.OUTPUT_EC_TRIGGER_TOPIC:\n",
+    "            if not np.isclose(target_freq, fmean, rtol=1e-3, atol=1e-6):\n",
+    "                print(f\"Error checking avg frequency for {topic}. Target frequency: {target_freq}. Average frequency: {fmean}\")\n",
+    "                any_errors = True\n",
+    "            if not lost_triggers < 5:\n",
+    "                print(f\"More than 5 triggers lost for {topic}\")\n",
+    "                any_errors = True\n",
     "        else:\n",
-    "            assert np.isclose(fmean, target_freq), f\"Error checking avg frequency for {topic}. Target frequency: {target_freq}. Average frequency: {fmean}\" \n",
-    "            assert lost_triggers == 0, f\"More than 0 triggers lost for {topic}\"\n",
+    "            if not np.isclose(fmean, target_freq):\n",
+    "                print(f\"Error checking avg frequency for {topic}. Target frequency: {target_freq}. Average frequency: {fmean}\")\n",
+    "                any_errors = True\n",
+    "            if not lost_triggers == 0:\n",
+    "                print(f\"More than 0 triggers lost for {topic}\")\n",
+    "                any_errors = True\n",
+    "    assert any_errors == False, \"Errors were detected\"\n",
     "    print(\"ALL CHECKS WERE SUCCESSFUL. YAY!\")\n",
     "\n",
     "except AssertionError as msg:\n",
